--- a/css/style.css
+++ b/css/style.css
@@ -476,6 +476,7 @@ h6 {
 .home .hero-txt .hero-title {
   font-family: "Oswald";
   color: #fff;
+  text-shadow: 0px 0px 100px black; 
   text-transform: uppercase;
   font-size: 70px;
   line-height: 85px;
@@ -502,6 +503,8 @@ h6 {
   border-width: 1px 0;
   border-style: solid;
   border-color: rgba(255, 255, 255, 0.3);
+  box-shadow: 2px 2px 5px black;
+  text-shadow: 0px 0px 5px black;
 }
 .home .hero-txt a.btn {
   text-transform: uppercase;
@@ -618,7 +621,7 @@ h6 {
   background-color: #f79166;
   color: #fff;
   box-shadow: inset 0 0 5px rgba(0, 0, 0, 0.01);
-  border-botom: 1px solid #f2f2f2;
+  border-bottom: 1px solid #f2f2f2;
   padding: 20px 0;
 }
 .page-breadcrumb .breadcrumb {
